refactored code